Added solution to keycloak, some sonar-fixes and reformatting